--- a/css/responsive.css
+++ b/css/responsive.css
@@ -23,4 +23,10 @@ a.pp_expand, a.pp_contract, .pp_hoverContainer, .pp_gallery, .pp_top, .pp_bottom
     background-size: 100% !important;
     height: 137px !important;
 }
+#cta2 .item {
+    background-position: 50% 0;
+    background-repeat: no-repeat;
+    background-size: 100% !important;
+    height: 137px !important;
+}
 }
